--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.8.22'
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.4.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:8.4.0'
         // 华为推送
         classpath 'com.huawei.agconnect:agcp:1.5.2.300'
         // 荣耀推送
