--- a/push/build.gradle
+++ b/push/build.gradle
@@ -1,6 +1,12 @@
 plugins {
-    alias(libs.plugins.android.library)
+//    alias(libs.plugins.android.library)
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'maven-publish'
 }
+
+group = "com.github.wyy-dev"
+version = "1.0.0"
 
 android {
     namespace 'com.xyvcard.push'
@@ -45,4 +51,18 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                from components.release
+                groupId = 'com.github.wyy-dev'
+                artifactId = 'push'
+                version = '1.0.0'
+            }
+        }
+    }
 }
