--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
         google()
+        maven { url 'https://jitpack.io' }
         mavenCentral()
         maven { url 'https://developer.huawei.com/repo/' }
         maven { url 'https://developer.hihonor.com/repo' }
