--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext.kotlin_version = '1.8.22'
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.4.0'
+//        classpath 'com.android.tools.build:gradle:8.6.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // 华为推送
