--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.8.22'
     dependencies {
-//        classpath 'com.android.tools.build:gradle:8.6.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.android.tools.build:gradle:8.4.2'
         // 华为推送
-//        classpath 'com.huawei.agconnect:agcp:1.5.2.300'
+        classpath 'com.huawei.agconnect:agcp:1.5.2.300'
         // 荣耀推送
-//        classpath 'com.hihonor.mcs:asplugin:2.0.1.300'
+        classpath 'com.hihonor.mcs:asplugin:2.0.1.300'
     }
 }
 
