--- a/push/src/main/AndroidManifest.xml
+++ b/push/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="com.vivo.abe.permission.launcher.notification.num" />
 
     <!-- 荣耀推送 -->
     <queries>
