--- a/settings.gradle
+++ b/settings.gradle
@@ -27,9 +27,9 @@ dependencyResolutionManagement {
 rootProject.name = "XyvcardPush"
 include ':app'
 include ':push'
-include ':mi'
-include ':oppo'
-include ':vivo'
+//include ':mi'
+//include ':oppo'
+//include ':vivo'
 include ':xm-push'
 include ':vivo-push'
 include ':oppo-push'
