解决OPPO闪退问题

--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,6 @@ include ':push'
 //include ':mi'
 //include ':oppo'
 //include ':vivo'
-include ':xm-push'
-include ':vivo-push'
-include ':oppo-push'
+//include ':xm-push'
+//include ':vivo-push'
+//include ':oppo-push'
