--- a/oppo-push/build.gradle
+++ b/oppo-push/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    namespace 'com.xyvcard.oppo'
+    namespace 'com.heytap.mcssdk'
     compileSdk 34
 
     defaultConfig {
@@ -43,7 +43,7 @@ mavenPublishing {
 }
 
 mavenPublishing {
-    coordinates("io.github.wyy-dev", "oppo-push", "1.0.0")
+    coordinates("io.github.wyy-dev", "oppo-push", "1.0.1")
     pom {
         name = "oppo-push"
         description = "OPPO推送"
